<resources>
    <string name="app_name">Instapic</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <string name="back4app_app_id">nk0duh5RXzZmPS3mPxBrHKSQNj3J7EkqwwTbZY0G</string>
    <string name="back4app_client_key">XMwMwRXt2VZEES3x2uelTUmrdYEDW37n9iDbDVmy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="caption">Caption</string>
    <string name="image">image</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="logo">Logo</string>
</resources>