<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tree_wallpaper"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="44dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/instagram_logo" />

    <TextView
        android:id="@+id/tv_createPost"
        android:layout_width="352dp"
        android:layout_height="101dp"
        android:layout_marginTop="104dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:letterSpacing="-0.064"
        android:text="@string/login"
        android:textColor="@color/acai"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/et_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:layout_marginTop="360dp"
        android:width="200dp"
        android:fontFamily="@font/roboto"
        android:foregroundTint="#000000"
        android:hint="@string/enter_username"
        android:letterSpacing="-0.04"
        android:maxLength="15"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="@color/grey"
        android:textColorLink="#FFFFFF"
        android:textSize="20sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:width="200dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/enter_password"
        android:letterSpacing="-0.04"
        android:maxLength="15"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColorHint="@color/grey"
        android:textSize="20sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_username" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="195dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/acai"
        android:fontFamily="@font/roboto"
        android:letterSpacing="-0.04"
        android:text="Login"
        android:textColor="@color/cream"
        android:textSize="30sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="195dp"
        android:layout_height="60dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/cream"
        android:fontFamily="@font/roboto"
        android:letterSpacing="-0.04"
        android:text="@string/sign_up"
        android:textColor="@color/acai"
        android:textSize="30sp"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>